# mlflow-experiments

./: .gitignore  01_check_mlflow.py  02_check_mlflow_with_deployment.py  03.1_mlflow_with_dagshub _getting the runs and models.py  03_mlflow_with_dagshub.py  README.md  Untitled.ipynb  mlruns_backend.db  pyproject.toml  utils.py
artifacts/1/1c3b7838874a486b8e012393e27b7364/artifacts/model/: MLmodel  model.pkl
artifacts/1/3745af38bf1c4a728c5e84d3c06442a5/artifacts/model/: MLmodel  model.pkl
artifacts/1/3bbdef1cf4d4491e837c0d9aae91d01b/artifacts/model/: MLmodel  model.pkl
artifacts/1/563bef23e75c4860a8be9599b80526da/artifacts/model/: MLmodel  model.pkl
artifacts/1/5644546313944c7da3b1d04ce910b126/artifacts/model/: MLmodel  model.pkl  requirements.txt
artifacts/1/589de98dda7a4993a1418de9dcf56b5d/artifacts/model/: MLmodel  model.pkl
artifacts/1/64a0fa47b9404f11a14ca7786206d8f8/artifacts/model/: MLmodel  model.pkl
artifacts/1/6d905533ea7f4307841e72e8abd0c0ba/artifacts/model/: MLmodel  model.pkl
artifacts/1/6e644c0c56274720a1bef3a2ed28ff52/artifacts/model/: MLmodel  model.pkl
artifacts/1/714a2697cf194bba88ff4f99fe281d4d/artifacts/model/: MLmodel  model.pkl
artifacts/1/7e084b521c4d462ba867ab00cf572e98/artifacts/model/: MLmodel  model.pkl
artifacts/1/856aeee201a64408a228552604f35966/artifacts/model/: MLmodel  model.pkl
artifacts/1/886fd89ee040442a8497fce71a3a98f9/artifacts/model/: MLmodel  model.pkl  python_env.yaml
mlruns/0/: meta.yaml
mlruns/models/sk-learn-random-forest-reg/: meta.yaml
(+13 files in other folders)
